_generated-doc/2.7/config/quarkus-generate-code-grpc-config-grpc-code-gen-config.adoc
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-generate-code-grpc-config-grpc-code-gen-config_configuration]]link:#quarkus-generate-code-grpc-config-grpc-code-gen-config_configuration[Configuration property]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-generate-code-grpc-config-grpc-code-gen-config_quarkus.generate-code.grpc.scan-for-proto]]`link:#quarkus-generate-code-grpc-config-grpc-code-gen-config_quarkus.generate-code.grpc.scan-for-proto[quarkus.generate-code.grpc.scan-for-proto]`

[.description]
--
gRPC code generation can scan dependencies of the application for proto files to generate Java stubs from. This property sets the scope of the dependencies to scan. Applicable values:  
 - _none_ - default - don't scan dependencies 
 - a comma seperated list of _groupId:artifactId_ coordinates to scan 
 - _all_ - scan all dependencies
--|string 
|`none`


a|icon:lock[title=Fixed at build time] [[quarkus-generate-code-grpc-config-grpc-code-gen-config_quarkus.generate-code.grpc.scan-for-imports]]`link:#quarkus-generate-code-grpc-config-grpc-code-gen-config_quarkus.generate-code.grpc.scan-for-imports[quarkus.generate-code.grpc.scan-for-imports]`

[.description]
--
Specify the dependencies that are allowed to have proto files that can be imported by this application's protos Applicable values:  
 - _none_ - default - don't scan dependencies 
 - a comma seperated list of _groupId:artifactId_ coordinates to scan 
 - _all_ - scan all dependencies  By default: _com.google.protobuf:protobuf-java_
--|string 
|`com.google.protobuf:protobuf-java`

|===